# AIS

./: AIS.sln
AIS/: CMakeLists.txt
AIS/config/: AisDaemon.conf
AIS/include/: AIS.h  AisDebug.h  AisMessage.h  AisMessageParser.h  CClient.h  CConnPool.h  general.h
AIS/include/utils/: CoordinateTransformUtils.h  EncodingConverter.h  config_file.h  path_utils.h  str_utils.h  time_utils.h
AIS/lib/linux/: libmysqlcppconn.so.9
AIS/lib/windows/: libcrypto.lib  libssl.lib
AIS/src/: AIS.cpp  CClient.cpp  CConnPool.cpp  CoordinateTransformUtils.cpp
Debug/: AIS.exp  AIS.lib
